kubernetes_deployment/components/keycloak/db_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-db
spec:
  serviceName: keycloak-db
  selector:
    matchLabels:
      app: keycloak-db
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: keycloak-db
          image: postgres:17-alpine
          imagePullPolicy: Always
          resources:
            requests:
              memory: 32Mi
              cpu: 1m
            limits:
              memory: 256Mi
              cpu: 250m
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: keycloak-db-data
      spec:
        storageClassName: csi-nas
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
        accessModes:
          - ReadWriteMany
