kubernetes_deployment/components/keycloak/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak-db
  name: keycloak-db
spec:
  selector:
    app: keycloak-db
  ports:
  - name: tcp
    port: 5432
    targetPort: 5432
