kubernetes_deployment/components/keycloak/kc_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-strip-prefix
  namespace: <my-namespace>
spec:
  stripPrefix:
    prefixes:
      - /auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: <my-namespace>
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: <my-namespace>-keycloak-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - <my-host>
    secretName: <my-tls-secret-name>
  rules:
  - host: <my-host>
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
